--- a/bmi/index.html
+++ b/bmi/index.html
@@ -10,7 +10,7 @@
     <title>How is your BMI</title>
  </head>
 
-<body>
+<body style="background-color: lightgray">
 
     <div class="container mt-5">
         <div class="row">
@@ -30,7 +30,8 @@
             </div>
 
             <div class="col-med-3 ml-3">
-                <div id="result">Please, enter your informations, which are asked in the form!</div>
+                <div id="result">Please, enter your informations, which are asked in the form!
+                <br>And press CALCULATE to know you body mass index.</div>
             </div>
         </div>
     </div>
